--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Byte-compiled / optimized / DLL files
+*.idea
 __pycache__/
 *.py[cod]
 *$py.class
@@ -57,6 +58,7 @@ coverage.xml
 
 # Django stuff:
 *.log
+settings.py
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
